[package]
authors = ["iimuz <iz.primary.story+github@gmail.com>"]
name = "toggl_summary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.107"
